Updated spacing issues on resizing design page

--- a/src/css/Designs.css
+++ b/src/css/Designs.css
@@ -227,6 +227,7 @@
     display: flex;
     flex-direction: column;
     height: fit-content;
+    margin-top: 3vh;
   }
   #rolling-cab-video,
   #walnut-desk-video {
